[gd_scene load_steps=16 format=3 uid="uid://qslq878mwgt7"]

[ext_resource type="Script" uid="uid://cu8xx5lol6c7e" path="res://ranged.gd" id="1_ihxqk"]
[ext_resource type="Texture2D" uid="uid://cv6lnsf12w2gu" path="res://assets/industrial.v2.png" id="2_4qb3e"]
[ext_resource type="PackedScene" uid="uid://cuy0lgtl7esbu" path="res://scenes/bullets/bullet_base.tscn" id="2_8akpr"]
[ext_resource type="PackedScene" uid="uid://g51wsrys1hsp" path="res://scenes/killzone.tscn" id="3_8akpr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l5lq6"]
atlas = ExtResource("2_4qb3e")
region = Rect2(0, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbnym"]
atlas = ExtResource("2_4qb3e")
region = Rect2(16, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_veat2"]
atlas = ExtResource("2_4qb3e")
region = Rect2(32, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mfnq"]
atlas = ExtResource("2_4qb3e")
region = Rect2(48, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv6vd"]
atlas = ExtResource("2_4qb3e")
region = Rect2(64, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv5gc"]
atlas = ExtResource("2_4qb3e")
region = Rect2(80, 416, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj1r3"]
atlas = ExtResource("2_4qb3e")
region = Rect2(96, 416, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l5lq6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5lq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbnym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veat2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mfnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv6vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv5gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj1r3")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_veat2"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bbnym"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mfnq"]
size = Vector2(14, 13)

[node name="ranged" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_ihxqk")
bullet_scene = ExtResource("2_8akpr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_l5lq6")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_veat2")

[node name="Hitbox" parent="." instance=ExtResource("3_8akpr")]
collision_layer = 16
collision_mask = 32
script = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_bbnym")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-7, 0)

[node name="RayCastBottom" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(0, 8)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="." groups=["enemy_hurtbox"]]
position = Vector2(0, -7)
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_5mfnq")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
